# lolcrab

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  build.rs  rustfmt.toml
.github/: FUNDING.yml  renovate.json5
.github/workflows/: ci.yml  deploy.yml  grcov.yml  release.yml  workflow.yml
examples/: basic.rs  lol.rs
scripts/: lorem.txt  presets.sh  random_colors.sh  seed.sh
src/: ansi_escape.rs  cat.rs  cli.rs  codec.rs  color.rs  lib.rs  lol.rs  main.rs  rainbow.rs  rainbow_cmd.rs  state.rs
