[package]
name = "lolcrab"
version = "0.3.1"
authors = ["David Knaack <davidkna@users.noreply.github.com>", "Nor Khasyatillah <mazznoer@ymail.com>"]
edition = "2018"
description = "Like lolcat but with noise and more colorful."
keywords = ["lolcat", "rainbow"]
categories = ["command-line-interface", "command-line-utilities", "games"]
readme = "README.md"
repository = "https://github.com/mazznoer/lolcrab"
documentation = "https://docs.rs/lolcrab/"
license = "MIT OR Apache-2.0"
exclude = [
	".github/*",
	"docs/*",
	"test_data/*",
]

[profile.release]
lto = true
strip = true

[features]
default = ["clap"]

[dependencies]
bstr = "1.9.1"
clap = { version = "4.5.9", features = ["derive", "wrap_help"], optional = true }
colorgrad = { git = "https://github.com/mazznoer/colorgrad-rs.git" }
fastrand = "2.1.0"
noise = { version = "0.9.0", default-features = false }
unicode-segmentation = "1.10.1"
unicode-width = "0.1.10"

# Allocator
mimalloc = { version = "0.1.37", optional = true, default-features = false }

[build-dependencies]
clap = { version = "4.5.9", features = ["derive", "wrap_help"] }
clap_complete = "4.5.8"
colorgrad = { git = "https://github.com/mazznoer/colorgrad-rs.git" }
