[package]
name = "lolcrab"
version = "0.4.1"
authors = [
    "David Knaack <davidkna@users.noreply.github.com>",
    "Nor Khasyatillah <mazznoer@ymail.com>",
]
edition = "2018"
description = "Like lolcat but with noise and more colorful."
keywords = ["lolcat", "rainbow"]
categories = ["command-line-interface", "command-line-utilities", "games"]
readme = "README.md"
repository = "https://github.com/mazznoer/lolcrab"
documentation = "https://docs.rs/lolcrab/"
license = "MIT OR Apache-2.0"
exclude = [
    ".github/*",
    "docs/*",
    "scripts/*",
    "test_data/*",
    "Makefile",
]

[package.metadata.docs.rs]
no-default-features = true

[profile.release]
lto = true
strip = true

[features]
default = ["cli"]
cli = ["clap", "clap_complete"]

[[bin]]
name = "lolcrab"
path = "src/main.rs"
required-features = ["cli"]

[dependencies]
bstr = "1.9.1"
clap = { version = "4.5.9", features = ["derive", "wrap_help"], optional = true }
#colorgrad = { version = "0.7.0" }
colorgrad = { git = "https://github.com/mazznoer/colorgrad-rs" }
fastrand = "2.1.0"
mimalloc = { version = "0.1.37", optional = true, default-features = false }
noise = { version = "0.9.0", default-features = false }
unicode-segmentation = "1.10.1"
unicode-width = "0.2.0"

[build-dependencies]
clap = { version = "4.5.9", features = ["derive", "wrap_help"], optional = true }
clap_complete = { version = "4.5.8", optional = true }
#colorgrad = { version = "0.7.0" }
colorgrad = { git = "https://github.com/mazznoer/colorgrad-rs" }
